# axum-sqlx-rust

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs
migrations/: 20220102221923_test.down.sql  20220102221923_test.up.sql  20220103105333_null.down.sql  20220103105333_null.up.sql  20220107110628_initial.down.sql  20220107110628_wa7.up.sql
src/: main.rs  postgres.rs
