[package]
name = "axum-sqlx-sqlite-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = [ "full" ] }
axum = "0.4"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres" ] }
dotenv = "0.15"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"